--- a/nirmata_configuration_files/calico_cni_vxlan.yaml
+++ b/nirmata_configuration_files/calico_cni_vxlan.yaml
@@ -4577,6 +4577,9 @@ spec:
             # Enable or Disable VXLAN on the default IPv6 IP pool.
             - name: CALICO_IPV6POOL_VXLAN
               value: "Always"
+            # Specify interface
+            - name: IP_AUTODETECTION_METHOD
+              value: "interface=ens.*"
             # Set MTU for tunnel device used if ipip is enabled
             - name: FELIX_IPINIPMTU
               valueFrom:
